fix(addon-editor): `Editor` fix scrollbar (#333)

--- a/projects/addon-editor/components/toolbar/toolbar.style.less
+++ b/projects/addon-editor/components/toolbar/toolbar.style.less
@@ -2,8 +2,8 @@
 
 :host {
     display: flex;
-    flex-wrap: wrap;
     padding: 4px 12px;
+    overflow: auto;
 
     &._disabled {
         pointer-events: none;
